Added new files

--- a/home.html
+++ b/home.html
@@ -272,7 +272,7 @@
   </nav>
 
   <section class="hero">
-      <img src="/images/run1.jpeg" alt="Construction worker using a jackhammer" class="hero-image" width="1200" height="800">
+      <img src="/images/run1.png" alt="Construction worker using a jackhammer" class="hero-image" width="1200" height="800">
       <h1>🛠️ Welcome to ToolSpace.lk</h1>
       <p>Rent professional hardware tools anytime, anywhere. Get the tools you need for your projects without the commitment of buying.</p>
   </section>
