Add admin panel with user/item/rental management

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>ToolSpace.lk</title>
 <script>
     // Always redirect to the login page
-    window.location.href = 'login.html';
+    window.location.href = 'register.html';
 </script>
 <style>
   body {
